tests/ui/move_self.stderr
error: #[async_wrap] requires `&self`, not `self`
 --> ui/move_self.rs:8:23
  |
8 |     pub fn bad_method(self) -> i32 {
  |                       ^^^^
